[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://img/background.jpg" type="Texture" id=2]
[ext_resource path="res://RewardSlot.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/background.wav" type="AudioStream" id=4]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 0, -1.32684 )
scale = Vector2( 0.592522, 0.591715 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform", "Z Index" ]

[node name="GameContainer" type="Container" parent="." index="1"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="Reward_1" parent="GameContainer" index="0" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = -250.0
margin_bottom = -250.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="Reward_2" parent="GameContainer" index="1" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = -175.0
margin_bottom = -175.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="Reward_3" parent="GameContainer" index="2" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 250.0
margin_right = 250.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="Reward_4" parent="GameContainer" index="3" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 200.0
margin_top = 175.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="Reward_5" parent="GameContainer" index="4" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_top = 250.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="Reward_6" parent="GameContainer" index="5" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = 175.0
margin_right = -200.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="Reward_7" parent="GameContainer" index="6" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_right = -250.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="Reward_8" parent="GameContainer" index="7" instance=ExtResource( 3 )]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -175.0
margin_right = -200.0
margin_bottom = -175.0
_sections_unfolded = [ "Margin", "Transform" ]

[node name="HUDContainer" type="Container" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -134.5
margin_top = -135.0
margin_right = 134.5
margin_bottom = 135.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="SwitchModeButton" type="Button" parent="HUDContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Switch Mode"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="StartButton" type="Button" parent="HUDContainer" index="1"]

anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1
_sections_unfolded = [ "Margin" ]

[node name="ExactlyContainer" type="Container" parent="HUDContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_bottom = -80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="RoateContainer" type="Container" parent="HUDContainer/ExactlyContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="Label" type="Label" parent="HUDContainer/ExactlyContainer/RoateContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Round (min: 1 + 2)"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="NumberControlContainer" type="Container" parent="HUDContainer/ExactlyContainer/RoateContainer" index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="DecrementButton" type="Button" parent="HUDContainer/ExactlyContainer/RoateContainer/NumberControlContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<"
flat = false
align = 1

[node name="InputLineEdit" type="LineEdit" parent="HUDContainer/ExactlyContainer/RoateContainer/NumberControlContainer" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -29.0
margin_right = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "1"
align = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "1"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Margin", "Placeholder" ]

[node name="IncrementButton" type="Button" parent="HUDContainer/ExactlyContainer/RoateContainer/NumberControlContainer" index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">"
flat = false
align = 1

[node name="RoateSpeedContainer" type="Container" parent="HUDContainer/ExactlyContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 40.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="Label" type="Label" parent="HUDContainer/ExactlyContainer/RoateSpeedContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Speed (max: 1 sec)"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="NumberControlContainer" type="Container" parent="HUDContainer/ExactlyContainer/RoateSpeedContainer" index="1"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="DecrementButton" type="Button" parent="HUDContainer/ExactlyContainer/RoateSpeedContainer/NumberControlContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<"
flat = false
align = 1

[node name="InputLineEdit" type="LineEdit" parent="HUDContainer/ExactlyContainer/RoateSpeedContainer/NumberControlContainer" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -29.0
margin_right = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "0.1"
align = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "0.1"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Margin", "Placeholder" ]

[node name="IncrementButton" type="Button" parent="HUDContainer/ExactlyContainer/RoateSpeedContainer/NumberControlContainer" index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">"
flat = false
align = 1

[node name="RewardContainer" type="Container" parent="HUDContainer/ExactlyContainer" index="2"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 80.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="Label" type="Label" parent="HUDContainer/ExactlyContainer/RewardContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Reward Slot (max: 8)"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin" ]

[node name="NumberControlContainer" type="Container" parent="HUDContainer/ExactlyContainer/RewardContainer" index="1"]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="DecrementButton" type="Button" parent="HUDContainer/ExactlyContainer/RewardContainer/NumberControlContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_right = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "<"
flat = false
align = 1

[node name="InputLineEdit" type="LineEdit" parent="HUDContainer/ExactlyContainer/RewardContainer/NumberControlContainer" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -29.0
margin_right = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
text = "1"
align = 1
editable = false
focus_mode = 2
context_menu_enabled = true
placeholder_text = "1"
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Margin", "Placeholder", "Rect" ]

[node name="IncrementButton" type="Button" parent="HUDContainer/ExactlyContainer/RewardContainer/NumberControlContainer" index="2"]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = ">"
flat = false
align = 1

[node name="BackgroundSound" type="AudioStreamPlayer2D" parent="." index="3"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[connection signal="finish_play_animation" from="GameContainer/Reward_1" to="." method="_on_Reward_1_finish_play_animation"]

[connection signal="finish_play_animation" from="GameContainer/Reward_2" to="." method="_on_Reward_2_finish_play_animation"]

[connection signal="finish_play_animation" from="GameContainer/Reward_3" to="." method="_on_Reward_3_finish_play_animation"]

[connection signal="finish_play_animation" from="GameContainer/Reward_4" to="." method="_on_Reward_4_finish_play_animation"]

[connection signal="finish_play_animation" from="GameContainer/Reward_5" to="." method="_on_Reward_5_finish_play_animation"]

[connection signal="finish_play_animation" from="GameContainer/Reward_6" to="." method="_on_Reward_6_finish_play_animation"]

[connection signal="finish_play_animation" from="GameContainer/Reward_7" to="." method="_on_Reward_7_finish_play_animation"]

[connection signal="finish_play_animation" from="GameContainer/Reward_8" to="." method="_on_Reward_8_finish_play_animation"]

[connection signal="pressed" from="HUDContainer/SwitchModeButton" to="." method="_on_SwitchModeButton_pressed"]

[connection signal="pressed" from="HUDContainer/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="HUDContainer/ExactlyContainer/RoateContainer/NumberControlContainer/DecrementButton" to="." method="_on_RotateDecrementButton_pressed"]

[connection signal="pressed" from="HUDContainer/ExactlyContainer/RoateContainer/NumberControlContainer/IncrementButton" to="." method="_on_RotateIncrementButton_pressed"]

[connection signal="pressed" from="HUDContainer/ExactlyContainer/RoateSpeedContainer/NumberControlContainer/DecrementButton" to="." method="_on_SpeedDecrementButton_pressed"]

[connection signal="pressed" from="HUDContainer/ExactlyContainer/RoateSpeedContainer/NumberControlContainer/IncrementButton" to="." method="_on_SpeedIncrementButton_pressed"]

[connection signal="pressed" from="HUDContainer/ExactlyContainer/RewardContainer/NumberControlContainer/DecrementButton" to="." method="_on_RewardSlotDecrementButton_pressed"]

[connection signal="pressed" from="HUDContainer/ExactlyContainer/RewardContainer/NumberControlContainer/IncrementButton" to="." method="_on_RewardSlotIncrementButton_pressed"]

[connection signal="finished" from="BackgroundSound" to="." method="_on_BackgroundSound_finished"]


